--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,35 +2,62 @@ x-common-env: &common-env
   _APP_ENV: production
   _APP_WORKER_PER_CORE: '6'
   _APP_OPENSSL_KEY_V1: ${SERVICE_PASSWORD_64_APPWRITE}
-
 x-db-env: &db-env
   _APP_DB_HOST: appwrite-mariadb
   _APP_DB_PORT: '3306'
   _APP_DB_SCHEMA: appwrite
   _APP_DB_USER: ${SERVICE_USER_MARIADB}
   _APP_DB_PASS: ${SERVICE_PASSWORD_MARIADB}
-
 x-redis-env: &redis-env
   _APP_REDIS_HOST: appwrite-redis
   _APP_REDIS_PORT: '6379'
-
 x-domain-env: &domain-env
   _APP_DOMAIN: appwrite.systemprog.shop
   _APP_CONSOLE_DOMAIN: appwrite.systemprog.shop
   _APP_DOMAIN_FUNCTIONS: functions.appwrite.systemprog.shop
   _APP_DOMAIN_SITES: sites.appwrite.systemprog.shop
-
 x-worker-base-env: &worker-base-env
   <<: [*common-env, *db-env, *redis-env]
-
+x-maintenance-env: &maintenance-env
+  _APP_MAINTENANCE_INTERVAL: '86400'
+  _APP_MAINTENANCE_RETENTION_EXECUTION: '1209600'
+  _APP_MAINTENANCE_RETENTION_CACHE: '2592000'
+  _APP_MAINTENANCE_RETENTION_ABUSE: '86400'
+  _APP_MAINTENANCE_RETENTION_AUDIT: '1209600'
+  _APP_MAINTENANCE_RETENTION_USAGE_HOURLY: '8640000'
+  _APP_MAINTENANCE_RETENTION_SCHEDULES: '86400'
+x-compute-env: &compute-env
+  _APP_COMPUTE_CPUS: '0'
+  _APP_COMPUTE_MEMORY: '0'
+  _APP_COMPUTE_SIZE_LIMIT: '30000000'
+  _APP_COMPUTE_BUILD_TIMEOUT: '900'
+x-timeout-env: &timeout-env
+  _APP_FUNCTIONS_TIMEOUT: '900'
+  _APP_SITES_TIMEOUT: '900'
+x-executor-env: &executor-env
+  _APP_EXECUTOR_SECRET: ${SERVICE_PASSWORD_64_APPWRITE}
+  _APP_EXECUTOR_HOST: http://appwrite-executor/v1
+x-storage-env: &storage-env
+  _APP_STORAGE_LIMIT: '30000000'
+  _APP_STORAGE_PREVIEW_LIMIT: '20000000'
+  _APP_STORAGE_ANTIVIRUS: disabled
+  _APP_STORAGE_DEVICE: local
+x-email-env: &email-env
+  _APP_SYSTEM_EMAIL_NAME: Appwrite
+  _APP_SYSTEM_EMAIL_ADDRESS: team@appwrite.io
+  _APP_SYSTEM_TEAM_EMAIL: team@appwrite.io
+  _APP_EMAIL_SECURITY: certs@appwrite.io
+x-options-env: &options-env
+  _APP_OPTIONS_ABUSE: enabled
+  _APP_OPTIONS_ROUTER_PROTECTION: disabled
+  _APP_OPTIONS_FORCE_HTTPS: disabled
+  _APP_OPTIONS_ROUTER_FORCE_HTTPS: disabled
 x-healthcheck-http: &healthcheck-http
   interval: 20s
   timeout: 5s
   retries: 3
-
 x-network: &network
   - appwrite-network
-
 x-depends-db-redis: &depends-db-redis
   - appwrite-redis
   - appwrite-mariadb
@@ -53,42 +80,15 @@ services:
       - 'appwrite-builds:/storage/builds:rw'
     depends_on: *depends-db-redis
     environment:
-      <<: [*common-env, *db-env, *redis-env, *domain-env]
+      <<: [*common-env, *db-env, *redis-env, *domain-env, *email-env, *options-env, *storage-env, *compute-env, *timeout-env, *executor-env, *maintenance-env]
       _APP_EDITION: self-hosted
       _APP_LOCALE: en
       _APP_CONSOLE_WHITELIST_ROOT: enabled
-      _APP_SYSTEM_EMAIL_NAME: Appwrite
-      _APP_SYSTEM_EMAIL_ADDRESS: team@appwrite.io
-      _APP_SYSTEM_TEAM_EMAIL: team@appwrite.io
-      _APP_EMAIL_SECURITY: certs@appwrite.io
-      _APP_OPTIONS_ABUSE: enabled
-      _APP_OPTIONS_ROUTER_PROTECTION: disabled
-      _APP_OPTIONS_FORCE_HTTPS: disabled
-      _APP_OPTIONS_ROUTER_FORCE_HTTPS: disabled
       _APP_DOMAIN_TARGET_CNAME: localhost
       _APP_DOMAIN_TARGET_AAAA: '::1'
       _APP_DOMAIN_TARGET_A: 127.0.0.1
       _APP_USAGE_STATS: enabled
-      _APP_STORAGE_LIMIT: '30000000'
-      _APP_STORAGE_PREVIEW_LIMIT: '20000000'
-      _APP_STORAGE_ANTIVIRUS: disabled
-      _APP_STORAGE_DEVICE: local
-      _APP_COMPUTE_SIZE_LIMIT: '30000000'
-      _APP_FUNCTIONS_TIMEOUT: '900'
-      _APP_SITES_TIMEOUT: '900'
-      _APP_COMPUTE_BUILD_TIMEOUT: '900'
-      _APP_COMPUTE_CPUS: '0'
-      _APP_COMPUTE_MEMORY: '0'
       _APP_FUNCTIONS_RUNTIMES: node-20.0,php-8.2,python-3.11,ruby-3.2
-      _APP_EXECUTOR_SECRET: ${SERVICE_PASSWORD_64_APPWRITE}
-      _APP_EXECUTOR_HOST: http://appwrite-executor/v1
-      _APP_MAINTENANCE_INTERVAL: '86400'
-      _APP_MAINTENANCE_RETENTION_EXECUTION: '1209600'
-      _APP_MAINTENANCE_RETENTION_CACHE: '2592000'
-      _APP_MAINTENANCE_RETENTION_ABUSE: '86400'
-      _APP_MAINTENANCE_RETENTION_AUDIT: '1209600'
-      _APP_MAINTENANCE_RETENTION_USAGE_HOURLY: '8640000'
-      _APP_MAINTENANCE_RETENTION_SCHEDULES: '86400'
       _APP_GRAPHQL_MAX_BATCH_SIZE: '10'
       _APP_GRAPHQL_MAX_COMPLEXITY: '250'
       _APP_GRAPHQL_MAX_DEPTH: '3'
@@ -113,9 +113,7 @@ services:
     networks: *network
     depends_on: *depends-db-redis
     environment:
-      <<: [*common-env, *db-env, *redis-env]
-      _APP_OPTIONS_ABUSE: enabled
-      _APP_OPTIONS_ROUTER_PROTECTION: disabled
+      <<: [*common-env, *db-env, *redis-env, *options-env]
       _APP_USAGE_STATS: enabled
     healthcheck:
       <<: *healthcheck-http
@@ -140,8 +138,7 @@ services:
     networks: *network
     depends_on: *depends-db-redis
     environment:
-      <<: *worker-base-env
-      _APP_EMAIL_SECURITY: certs@appwrite.io
+      <<: [*worker-base-env, *email-env]
     healthcheck:
       <<: *healthcheck-http
       test: ["CMD-SHELL", "ps aux | grep -q '[w]orker-webhooks' || exit 1"]
@@ -160,10 +157,7 @@ services:
       - 'appwrite-certificates:/storage/certificates:rw'
     depends_on: *depends-db-redis
     environment:
-      <<: *worker-base-env
-      _APP_STORAGE_DEVICE: local
-      _APP_EXECUTOR_SECRET: ${SERVICE_PASSWORD_64_APPWRITE}
-      _APP_EXECUTOR_HOST: http://appwrite-executor/v1
+      <<: [*worker-base-env, *storage-env, *executor-env]
       _APP_MAINTENANCE_RETENTION_AUDIT: '1209600'
     healthcheck:
       <<: *healthcheck-http
@@ -193,17 +187,7 @@ services:
       - 'appwrite-uploads:/storage/uploads:rw'
     depends_on: *depends-db-redis
     environment:
-      <<: [*worker-base-env, *domain-env]
-      _APP_EXECUTOR_SECRET: ${SERVICE_PASSWORD_64_APPWRITE}
-      _APP_EXECUTOR_HOST: http://appwrite-executor/v1
-      _APP_FUNCTIONS_TIMEOUT: '900'
-      _APP_SITES_TIMEOUT: '900'
-      _APP_COMPUTE_BUILD_TIMEOUT: '900'
-      _APP_COMPUTE_CPUS: '0'
-      _APP_COMPUTE_MEMORY: '0'
-      _APP_COMPUTE_SIZE_LIMIT: '30000000'
-      _APP_OPTIONS_FORCE_HTTPS: disabled
-      _APP_STORAGE_DEVICE: local
+      <<: [*worker-base-env, *domain-env, *executor-env, *timeout-env, *compute-env, *options-env, *storage-env]
     healthcheck:
       <<: *healthcheck-http
       test: ["CMD-SHELL", "ps aux | grep -q '[w]orker-builds' || exit 1"]
@@ -234,15 +218,7 @@ services:
       - appwrite-mariadb
       - openruntimes-executor
     environment:
-      <<: [*worker-base-env, *domain-env]
-      _APP_OPTIONS_FORCE_HTTPS: disabled
-      _APP_FUNCTIONS_TIMEOUT: '900'
-      _APP_SITES_TIMEOUT: '900'
-      _APP_COMPUTE_BUILD_TIMEOUT: '900'
-      _APP_COMPUTE_CPUS: '0'
-      _APP_COMPUTE_MEMORY: '0'
-      _APP_EXECUTOR_SECRET: ${SERVICE_PASSWORD_64_APPWRITE}
-      _APP_EXECUTOR_HOST: http://appwrite-executor/v1
+      <<: [*worker-base-env, *domain-env, *options-env, *timeout-env, *compute-env, *executor-env]
       _APP_USAGE_STATS: enabled
     healthcheck:
       <<: *healthcheck-http
@@ -255,10 +231,7 @@ services:
     networks: *network
     depends_on: *depends-db-redis
     environment:
-      <<: [*worker-base-env, *domain-env]
-      _APP_SYSTEM_EMAIL_NAME: Appwrite
-      _APP_SYSTEM_EMAIL_ADDRESS: team@appwrite.io
-      _APP_OPTIONS_FORCE_HTTPS: disabled
+      <<: [*worker-base-env, *domain-env, *email-env, *options-env]
     healthcheck:
       <<: *healthcheck-http
       test: ["CMD-SHELL", "ps aux | grep -q '[w]orker-mails' || exit 1"]
@@ -273,8 +246,7 @@ services:
     depends_on:
       - appwrite-redis
     environment:
-      <<: [*common-env, *db-env, *redis-env]
-      _APP_STORAGE_DEVICE: local
+      <<: [*common-env, *db-env, *redis-env, *storage-env]
     healthcheck:
       <<: *healthcheck-http
       test: ["CMD-SHELL", "ps aux | grep -q '[w]orker-messaging' || exit 1"]
@@ -289,8 +261,7 @@ services:
     depends_on:
       - appwrite-mariadb
     environment:
-      <<: [*common-env, *db-env, *redis-env, *domain-env]
-      _APP_EMAIL_SECURITY: certs@appwrite.io
+      <<: [*common-env, *db-env, *redis-env, *domain-env, *email-env]
 
   appwrite-task-maintenance:
     image: 'appwrite/appwrite:1.7.4'
@@ -300,14 +271,7 @@ services:
     depends_on:
       - appwrite-redis
     environment:
-      <<: [*common-env, *db-env, *redis-env, *domain-env]
-      _APP_MAINTENANCE_INTERVAL: '86400'
-      _APP_MAINTENANCE_RETENTION_EXECUTION: '1209600'
-      _APP_MAINTENANCE_RETENTION_CACHE: '2592000'
-      _APP_MAINTENANCE_RETENTION_ABUSE: '86400'
-      _APP_MAINTENANCE_RETENTION_AUDIT: '1209600'
-      _APP_MAINTENANCE_RETENTION_USAGE_HOURLY: '8640000'
-      _APP_MAINTENANCE_RETENTION_SCHEDULES: '86400'
+      <<: [*common-env, *db-env, *redis-env, *domain-env, *maintenance-env]
     healthcheck:
       <<: *healthcheck-http
       test: ["CMD-SHELL", "ps aux | grep -q '[m]aintenance' || exit 1"]
